# screenplay-pdf-to-json

./: .gitignore  README.md  pyproject.toml
compress_pdf/: script.html  shrink_pdf.sh
parse_pdf/: Pipfile  index.js  index.ts  newDetermineLines.ts  package-lock.json  package.json  pipenv  result.json  tsconfig.json
parse_pdf/config/: renderOptions.ts
parse_pdf/enums/: characterNameEnum.ts  headingEnum.ts  timeEnum.ts  transitionsEnum.ts
parse_pdf/utils/: Pipfile  SortLines.py  determineLineTrends.ts  determineLines.py  determineLines.ts  determineSections.ts  determineTypes.ts  groupDualDialogue.py  groupDualDialogues.py  groupLines.py  groupSections.py  groupTypes.py  index.py  newDetermineLines.py  parseType.ts  removePageNumbers.py  renderText.js  renderText.ts  sortDualDialogue.ts  sortLine.ts  sortLinesInEachPage.py
parse_script/: Pipfile  index.py  requirements.txt
parse_script/parse_pdf/: SortLines.py  cleanPage.py  getTopTrends.py  groupDualDialogues.py  groupLines.py  groupSections.py  processInitialPages.py  stitchSeperateWordsIntoLines.py
parse_script/utils/: Pipfile  characterHelpers.py  headingHelpers.py  index.py  transitionHelpers.py
screenplay_pdf_to_json/: __init__.py  convert.py
screenplay_pdf_to_json/parse_pdf/: __init__.py  cleanPage.py  getTopTrends.py  groupDualDialogues.py  groupLines.py  groupSections.py  processInitialPages.py  stitchSeperateWordsIntoLines.py
screenplay_pdf_to_json/utils/: __init__.py  characterHelpers.py  cleanScript.py  headingHelpers.py
tests/: test_screenplay_pdf_to_json.py
(+19 files in other folders)
